fixed graphical issues

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Web Slinger</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { background: #000; display: flex; justify-content: center; align-items: center; height: 100vh; overflow: hidden; }
-    #game-container { position: relative; width: 1280px; height: 720px; }
+    body { background: #000; margin: 0; padding: 0; width: 100vw; height: 100vh; overflow: hidden; }
+    #game-container { position: relative; width: 100vw; height: 100vh; }
     #game-container canvas { display: block; width: 100%; height: 100%; }
     #hud {
       position: absolute; top: 0; left: 0; width: 100%; height: 100%;
